# ECLIPSE

./: .gitignore  BUILD_STATUS.md  CHANGES.md  CI_STATUS.md  CMakeLists.txt  CMakePresets.json  DEPLOY.md  DEPLOYMENT_FIX.md  FINAL_STATUS.md  FIXES_APPLIED.md  LICENSE  QUICKSTART.md  README.md  RECRUITER_READY.md  SETUP.md  VERIFY.md  build.ps1  vcpkg.json  vercel.json
.github/workflows/: ci.yml  pages.yml
assets/: README.md  placeholder.md
scripts/: build.ps1  build.sh  vercel-build.sh
src/app/: game_state.cpp  game_state.h  main.cpp  persistence.cpp  persistence.h  ui.cpp  ui.h
src/core/: constraints.cpp  constraints.h  daily_seed.cpp  daily_seed.h  generator.cpp  generator.h  grid.cpp  grid.h  region.cpp  region.h  solver.cpp  solver.h
tests/: test_constraints.cpp  test_generator.cpp  test_solver.cpp
